SUBDIRS = log types db hp conf 

noinst_HEADERS = util.h singleton.h time_clock.h settings.h \
                    base_exception.h rand_string.h concurrent_queue.h \
                    random_data_generator.h faked_args.h test_custom_main.h \
                    corba_wrapper.h corba_wrapper_decl.h handle_args.h \
                    handle_general_args.h config_handler.h handle_database_args.h \
                    handle_threadgroup_args.h handle_corbanameservice_args.h
                    