SUBDIRS = log types db hp conf cfg

noinst_HEADERS = util.h singleton.h time_clock.h settings.h \
                    base_exception.h random.h concurrent_queue.h \
                    random_data_generator.h \
                    corba_wrapper.h corba_wrapper_decl.h

noinst_LIBRARIES = libutils.a
libutils_a_SOURCES = random.cc

